--- a/index.css
+++ b/index.css
@@ -16,14 +16,13 @@ html, body {
 }
 
 .icon-offline {
-	content: -webkit-image-set( url(../images/buka_puasa/default_100_percent/100-error-offline.png) 1x, url(../images/buka_puasa/default_200_percent/200-error-offline.png) 2x);
+	content: -webkit-image-set(url(assets/default_100_percent/100-error-offline.png) 1x, url(assets/default_200_percent/200-error-offline.png) 2x);
 	position: relative;
 }
 
 .hidden {
 	display: none;
 }
-
 
 /* Offline page */
 
@@ -40,22 +39,19 @@ html, body {
 }
 
 .offline.inverted {
-//-webkit-filter: invert(100%);
 	background-color: #435d7f;
 }
 
-//background
-
-  .offline .interstitial-wrapper {
-	  color: #2b2b2b;
-	  font-size: 1em;
-	  line-height: 1.55;
-	  margin: 0 auto;
-	  max-width: 600px;
-	  padding-top: 100px;
-	  padding-bottom: 86px;
-	  width: 100%;
-  }
+.offline .interstitial-wrapper {
+	color: #2b2b2b;
+	font-size: 1em;
+	line-height: 1.55;
+	margin: 0 auto;
+	max-width: 600px;
+	padding-top: 100px;
+	padding-bottom: 86px;
+	width: 100%;
+}
 
 .offline .runner-container {
 	height: 150px;
@@ -94,6 +90,7 @@ html, body {
 	.suggested-left > #control-buttons, .suggested-right > #control-buttons {
 		float: none;
 	}
+
 	.snackbar {
 		left: 0;
 		bottom: 0;
@@ -106,12 +103,15 @@ html, body {
 	h1 {
 		margin: 0 0 15px;
 	}
+
 	.icon-offline {
 		margin: 0 0 10px;
 	}
+
 	.interstitial-wrapper {
 		margin-top: 5%;
 	}
+
 	.nav-wrapper {
 		margin-top: 30px;
 	}
@@ -124,7 +124,7 @@ html, body {
 	}
 }
 
-@media (min-width: 420px) and (max-width: 736px) and (min-height: 240px) and (max-height: 420px) and (orientation:landscape) {
+@media (min-width: 420px) and (max-width: 736px) and (min-height: 240px) and (max-height: 420px) and (orientation: landscape) {
 	.interstitial-wrapper {
 		margin-bottom: 100px;
 	}
@@ -134,6 +134,7 @@ html, body {
 	.offline .interstitial-wrapper {
 		margin-bottom: 90px;
 	}
+
 	.icon-offline {
 		margin-bottom: 20px;
 	}
@@ -143,6 +144,7 @@ html, body {
 	.icon-offline {
 		margin-bottom: 0;
 	}
+
 	.offline .runner-container {
 		top: 10px;
 	}
