--- a/index.css
+++ b/index.css
@@ -7,6 +7,7 @@ html, body {
 	margin: 0;
 	width: 100%;
 	height: 100%;
+	font-family: Roboto, sans-serif;
 }
 
 .icon {
@@ -24,42 +25,60 @@ html, body {
 	display: none;
 }
 
-/* Offline page */
-
-.container {
-	background-color: #7DDDB8;
+/* Play Content */
+.current-score {
+	position: absolute;
+	top: 20px;
+	right: 20px;
+	font-weight: bold;
+	color: #fff;
 }
+
+/* Offline page */
 
 .inverted .container {
 	background-color: #1c2b43;
 }
 
 .offline {
-	background-color: #0fc57e;
+	background-color: #2bb673;
 }
 
 .offline.inverted {
-	background-color: #435d7f;
+	background-color: #1c2b43;
 }
 
-.offline .interstitial-wrapper {
+.interstitial-wrapper {
 	color: #2b2b2b;
 	font-size: 1em;
 	line-height: 1.55;
 	margin: 0 auto;
 	max-width: 600px;
-	padding-top: 100px;
-	padding-bottom: 86px;
 	width: 100%;
+	position: absolute;
+	top: 0;
+	bottom: 25%;
+	background: #88c7c9;
+	background: -moz-linear-gradient(top, #88c7c9 0%, #d7ffff 100%);
+	background: -webkit-linear-gradient(top, #88c7c9 0%,#d7ffff 100%);
+	background: linear-gradient(to bottom, #88c7c9 0%,#d7ffff 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#88c7c9', endColorstr='#d7ffff',GradientType=0 );
+}
+.inverted .interstitial-wrapper {
+	background: #23344e;
+	background: -moz-linear-gradient(top, #23344e 0%, #59799f 98%);
+	background: -webkit-linear-gradient(top, #23344e 0%,#59799f 98%);
+	background: linear-gradient(to bottom, #23344e 0%,#59799f 98%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#23344e', endColorstr='#59799f',GradientType=0 );
 }
 
 .offline .runner-container {
-	height: 150px;
+	height: 500px;
 	max-width: 600px;
 	overflow: hidden;
 	position: absolute;
-	top: 35px;
 	width: 44px;
+	bottom: 0px;
 }
 
 .offline .runner-canvas {
@@ -68,8 +87,8 @@ html, body {
 	opacity: 1;
 	overflow: hidden;
 	position: absolute;
-	top: 0;
 	z-index: 2;
+	bottom: 0;
 }
 
 .offline .controller {
