--- a/index.css
+++ b/index.css
@@ -25,6 +25,38 @@ html, body {
 	padding-top: 40px;
 }
 
+#to-highscore {
+	padding-bottom: 128px;
+	position: absolute;
+	bottom: 25%;
+	left: 3%;
+	z-index: 100;
+}
+
+#to-highscore a {
+	margin-bottom: 375px;
+	position: relative;
+	cursor: pointer;
+	padding: 0.25rem 0.5rem;
+	font-size: 0.8203125rem;
+	line-height: 1.5;
+	border-radius: 0.2rem;
+	color: #fff;
+	background-color: #18BC9C;
+	font-weight: 400;
+	text-align: center;
+	white-space: nowrap;
+	vertical-align: middle;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	border: 1px solid #18BC9C;
+	text-decoration: none;
+	-webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+	transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+}
+
 #main-content {
 	max-height: 80%;
 }
